--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -96,6 +96,7 @@ input "1133:16478:Logitech_M720_Triathlon" {
 #
     # Start a terminal
     bindsym $mod+Return exec $term
+    bindsym $mod+Shift+Return exec $term nvim -c 'WikiJournal'
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -126,10 +127,10 @@ input "1133:16478:Logitech_M720_Triathlon" {
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
     # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+    #bindsym $mod+$left focus left
+    #bindsym $mod+$down focus down
+    #bindsym $mod+$up focus up
+    #bindsym $mod+$right focus right
 
     # Move the focused window with the same, but add Shift
     bindsym $mod+Shift+$left move left
@@ -137,10 +138,10 @@ input "1133:16478:Logitech_M720_Triathlon" {
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+    #bindsym $mod+Shift+$left move left
+    #bindsym $mod+Shift+$down move down
+    #bindsym $mod+Shift+$up move up
+    #bindsym $mod+Shift+$right move right
 #
 # Workspaces:
 #
@@ -221,10 +222,10 @@ mode "resize" {
     bindsym $right resize grow width 10px
 
     # Ditto, with arrow keys
-    bindsym Left resize shrink width 10px
-    bindsym Down resize grow height 10px
-    bindsym Up resize shrink height 10px
-    bindsym Right resize grow width 10px
+    #bindsym $left resize shrink width 10px
+    #bindsym $down resize grow height 10px
+    #bindsym $up resize shrink height 10px
+    #bindsym $right resize grow width 10px
 
     # Return to default mode
     bindsym Return mode "default"
@@ -250,20 +251,21 @@ bindsym Print exec "slurp | grim -g - - | wl-copy -t image/png"
 #    }
 #}
 #
-# Status Bar:
+# NOTE: I start this from theme
+#Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-bar {
+#bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
 #    status_command while date +'%Y-%m-%d %l:%M:%S %p'; do sleep 1; done
-    swaybar_command waybar
-}
+#    swaybar_command waybar
+#}
 
-bindsym XF86MonBrightnessUp exec light -A 15
-bindsym XF86MonBrightnessDown exec light -U 15
-bindsym Shift+XF86MonBrightnessUp exec light -A 1
-bindsym Shift+XF86MonBrightnessDown exec light -U 1
+bindsym XF86MonBrightnessUp exec brightnessctl s +15%
+bindsym XF86MonBrightnessDown exec brightnessctl s 15%-
+bindsym Shift+XF86MonBrightnessUp exec brightnessctl s +3%
+bindsym Shift+XF86MonBrightnessDown exec brightnessctl s 3%-
 
 bindsym XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 20%+
 bindsym Shift+XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -284,9 +286,10 @@ bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 exec gammastep
 #exec swayidle timeout 300 'wlopm --off \*' resume 'wlopm --on \*'
 exec swayidle -w \
-         timeout 300 'swaylock -f -c 000000' \
-         timeout 600 'swaymsg "output * dpms off"' \
-              resume 'swaymsg "output * dpms on"'
+         timeout 3600 'swaylock -f -c 000000' \
+         timeout 7200 'swaymsg "output * dpms off"' \
+              resume 'swaymsg "output * dpms on"' \
+	         before-sleep 'swaylock -c 000000'
 # exec swayidle -w \
 #          timeout 300 'swaylock -f -c 000000' \
 #          timeout 600 'swaymsg "output * dpms off"' \
@@ -296,12 +299,14 @@ exec swayidle -w \
 exec swaybg -i ~/wallpapers/default
 exec mako
 exec kanshi
-exec gentoo-pipewire-launcher &
 
-bindsym $mod+Control+Shift+Left  move workspace to output left
-bindsym $mod+Control+Shift+Right move workspace to output right
-bindsym $mod+Control+Shift+Up    move workspace to output up
-bindsym $mod+Control+Shift+Down  move workspace to output down
+bindsym $mod+Control+Shift+$left  move workspace to output left
+bindsym $mod+Control+Shift+$right move workspace to output right
+bindsym $mod+Control+Shift+$up    move workspace to output up
+bindsym $mod+Control+Shift+$down  move workspace to output down
 
 bindsym $mod+bracketleft workspace prev
 bindsym $mod+bracketright workspace next
+
+for_window [shell="xwayland"] title_format "[XWayland] %title"
+include ~/.config/sway/config.d/*
