--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -33,3 +33,9 @@ Alt+Shift+LEFT add playlist-pos -10
 0 seek 100 absolute-percent
 MOUSE_BTN3 seek 10
 MOUSE_BTN4 seek -10
+
+
+# Bind to cycle through 3D modes (Side-by-Side, Over/Under, etc.)
+Ctrl+9 cycle-values video-3d-depth 1 2 3 4
+Ctrl+0 cycle-values video-3d-depth 4 3 2 1
+
